variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:38: error: Missing closing brace `}' assumed here
	}
        ^