variables.RunHalf.scala.code
var nbBiscuit: Int = 0;
var nbOrange: Int=0;
var dejaFait: Int=0;
var condArret: Int=0;



  
  while(condArret!=1){
    avance();
    
    if(estSurOrange()){
      nbOrange= nbOrange+1;
    }
    else if(estSurBiscuit()){
      nbBiscuit=nbBiscuit +1;
    }
    if( 2*nbBiscuit== nbOrange +1 ){
      condArret=1;
    }

  
  
  
  
  
  
  
  
  
  
  
  
  
  
